# restaurantregister-python

./: .gitignore  README.md  conftest.html  index.html  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build-python.yml
cc410/register/: CashDrawer.py
register/: CardReader.html  CardTransactionResult.html  CashDenomination.html  CashDrawer.html  ReceiptPrinter.html  index.html
