[metadata]
name = cc410-restaurant-register
version = 1.0.5
author = Russell Feldhausen
author_email = russfeld@ksu.edu
description = CC 410 Register
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/russfeld/restaurantregister-python
project_urls =
    Bug Tracker = https://github.com/russfeld/restaurantregister-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package-data = True

[options.package_data]
register = py.typed